--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/c5ca5924a2.js"
+      crossorigin="anonymous"
+    ></script>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
